# web-vox

./: .gitignore  CLAUDE.md  Cargo.toml  package-lock.json  package.json  tsconfig.json
Phase One Test Assets/: index.html  start-test.sh  test-controller.py  test-scenarios.json
Phase Two Test Assets/: index.html  start-test.sh  test-controller.py  test-scenarios.json
crates/web-vox-protocol/: Cargo.toml
crates/web-vox-protocol/src/: lib.rs
examples/basic/: index.html
examples/electron/: main.ts
examples/node/: document-reader.ts  quality-check.ts  synthesize.ts
test-engines/: setup.sh
test-engines/ocr/: generate_test_assets.py  index.html
test-engines/sdk/: generate_test_images.py  index.html  serve.sh
test-engines/sdk/test-files/: dialogue-heavy.txt  edge-cases.txt  mixed-content.md  narrative.txt  news-article.html  poetry.txt  presentation.md  recipe.md  short-plain.txt  technical-docs.md
