[workspace]
resolver = "2"
members = [
    "crates/web-vox-protocol",
    "packages/native-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/user/web-vox"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
